[project]
name = "local-agent"
version = "0.1.0"
description = "A small local command-line agent with safe project file tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.scripts]
local-agent = "local_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
